Soften issue bar visuals and update to better convey state in dark mode.
The new dark mode for the issue bar moved to yellow buttons and an icon
to convey state, but in practice this didn't do enough to convey state.
Skimming a list of comments, it wasn't immediately clear which comments
were open and which were closed.

We now use a border around the issue bar when open. This is fairly
unobtrusive, but still stands out visually from closed banners, which
have no border and blend in more with the background.

The text color now updates to indicate the status. New design tokens
have been added for accented text colors, used in both the issue bar and
issue summary table.

The buttons have also been updated. When the issue is open, they are
yellow, but when closed, they're grey. This augments the border and
helps with a quick visual on the status.

The banner has also been given a subtly-softer border radius, reducing
the boxy look just a bit.

Testing Done:
Tested all the issue states in light and dark modes.

Reviewed at https://reviews.reviewboard.org/r/13819/

--- a/reviewboard/static/rb/css/ui/colors.less
+++ b/reviewboard/static/rb/css/ui/colors.less
@@ -151,6 +151,12 @@
 
         issue-border-color: var(--ink-p-container-outline);
 
+        /** Issue status text accent colors. */
+        issue-open-accent-text-color: var(--ink-p-light__yellow-300);
+        issue-dropped-accent-text-color: var(--ink-p-text-on-dark-color-weak);
+        issue-resolved-accent-text-color:
+          var(--ink-p-accent-success-fg-on-container);
+
         /** Color used for graph data representing diff insert operations. */
         diff-insert-graph-color:
           var(--if-light, var(--ink-p-green-500))
